intern/cloud/w10/lab/hung_lab/gatekeeper/templates/disallow-host-network.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowhostnetwork
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowHostNetwork
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sdisallowhostnetwork
      violation[{"msg": msg}] {
        input.review.object.spec.template.spec.hostNetwork == true
        msg := "hostNetwork: true không được phép — container phải dùng network riêng"
      }
