intern/cloud/w10/lab/hung_lab/gatekeeper/templates/disallow-run-as-root.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowrunasroot
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowRunAsRoot
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sdisallowrunasroot
      violation[{"msg": msg}] {
        spec := input.review.object.spec.template.spec
        spec.securityContext.runAsUser == 0
        msg := "Pod đang chạy root (runAsUser: 0) — không được phép"
      }
      violation[{"msg": msg}] {
        container := input.review.object.spec.template.spec.containers[_]
        container.securityContext.runAsUser == 0
        msg := sprintf("Container '%v' chạy root (runAsUser: 0) — không được phép", [container.name])
      }
