intern/cloud/w10/lab/hung_lab/gatekeeper/templates/require-resource-limits.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequireresourcelimits
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  crd:
    spec:
      names:
        kind: K8sRequireResourceLimits
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8srequireresourcelimits
      violation[{"msg": msg}] {
        container := input.review.object.spec.template.spec.containers[_]
        not container.resources.limits.cpu
        msg := sprintf("Container '%v' thiếu resources.limits.cpu", [container.name])
      }
      violation[{"msg": msg}] {
        container := input.review.object.spec.template.spec.containers[_]
        not container.resources.limits.memory
        msg := sprintf("Container '%v' thiếu resources.limits.memory", [container.name])
      }
